# tmux-windows

./: .gitignore  CLAUDE.md  CMakeLists.txt  README-win32-next.md  README_WIN32.MD  TODO.md  arguments.c  client.c  cmd-attach-session.c  cmd-find.c  cmd-if-shell.c  cmd-join-pane.c  cmd-kill-server.c  cmd-list-windows.c  cmd-load-buffer.c  cmd-new-session.c  cmd-new-window.c  cmd-parse.c  cmd-parse.y  cmd-pipe-pane.c  cmd-queue.c  cmd-run-shell.c  cmd-save-buffer.c  cmd-server-access.c  cmd-show-messages.c  cmd-source-file.c  cmd-split-window.c  cmd.c  compat.h  control.c  environ.c  file.c  format.c  input.c  job.c  log.c  mode-tree.c  names.c  options.c  osdep-windows.c  (+22 more)
.github/: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: use-this-issue-template.md
.github/workflows/: ci.yml
compat/: base64.c  getdtablecount.c  getdtablesize.c  getline.c  htonll.c  imsg-buffer.c  imsg.c  ntohll.c  recallocarray.c
regress/: win32-basic.sh  win32-claude-swarm.sh  win32-conf-syntax.sh  win32-control-client.sh  win32-format-strings.sh  win32-has-session.sh  win32-keys.sh  win32-layout.sh
win32/: win32-compat.c  win32-ipc.c  win32-platform.h  win32-process.c  win32-pty.c  win32-regex.c  win32-regex.h  win32-signal.c  win32-terminfo.c  win32-tty.c
